buil header and banner for page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 .header__navbar{
     height: 60px;
     display: flex;
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
     justify-content: space-around;
     align-items: center;
 }
@@ -15,19 +15,72 @@
 .navbar__item{
     font-size: 1.4rem;
     font-weight: 700;
-    color: var(--text-color);
     margin: 0 16px;
+    height: var(--height-header);
+    display: flex;
+    align-items: center;
+}
+.navbar__item .navbar__item-icon{
+    animation: swingDown ease-in-out 0.4s;
+}
+.navbar__item:hover .navbar__item-icon{
+    animation: swingUp ease-in-out 0.4s;
+    transform: rotate(180deg);
+}
+.navbar__item-link{
+    text-decoration: none;
+    color: var(--text-color);
+    text-align: center;
 }
 .navbar__item-icon{
     font-size: 1rem;
-    
 }
 .header__search{
-
+    width: 200px;
+    position: relative;
+    display: flex;
+    align-items: center;
 }
 .search__box{
-
+    width: 100%;
+    height: 36px;
+    border: 1px solid rgb(224, 224, 224);
+    border-radius: 2px;
+    padding: 0 10px;
+    outline: none;
 }
 .search__icon{
-
+    position: absolute;
+    right: 0;
+    color: var(--text-color);
+    font-size: 1.6rem;
+    font-weight: 600;
+    margin: 0 10px;
+}
+/* body */
+.banner{
+    position: relative;
+}
+.banner__transfer-page{
+    position: absolute;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 0;
+    background-color: rgba(255, 255, 255, 0.836);
+}
+.banner__transfer-left{
+    left: 5%;
+}
+.banner__transfer-right{
+    right: 5%;
+}
+.banner__img{
+    width: 100%;
+}
+.banner__transfer-icon{
+    font-size: 30px;
+    color:white;
+    outline: none;
 }
