--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,7 @@
     --text-header-color: rgb(114,114,114);
     --text-heading-color: rgb(165,0,100);
     --text-color: rgb(119,111,114);
+    --height-header: 60px
 }
 *{
     box-sizing: inherit;
@@ -16,4 +17,20 @@ html{
 }
 body{
     margin: 0;
+}
+@keyframes swingUp{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(180deg);
+    }
+}
+@keyframes swingDown{
+    from{
+        transform: rotate(180deg);
+    }
+    to{
+        transform: rotate(0deg);
+    }
 }
