--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -254,11 +254,11 @@
     }
 }
 
-@media (min-width: 740px) and (max-width:1023px){
+/* @media (min-width: 740px) and (max-width:1023px){
     .wide{
         width: 644px;
     }
-}
+} */
 
 @media (min-width: 1024px) and (max-width:1239){
     .wide{
