--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -16,6 +16,12 @@
     .instruction__steps-item{
         margin: auto;
     }
+    .security__img{
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
 }
 
 /* mobie */
