add service js for page

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -62,3 +62,10 @@ body{
         right: 0;
     }
 }
+
+.swingUp{
+    animation: swingUp ease 0.5s;
+}
+.swingDown{
+    animation: swingDown ease 0.5s;
+}
