--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,6 +6,27 @@
     .header__navbar{
         justify-content: center;
     }
+    .navbar__list{
+        position: absolute;
+        width: 80%;
+        margin: 0;
+        top: -500px;
+        background-color: white;
+        flex-direction: column;
+        transition: all 0.5s;
+    }
+    .navbar__item{
+        width: 100%;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+    .navbar__item-link{
+        width: 100%;
+        padding: 0 20px;
+        text-align: start;
+    }
+    .navbar__item-icon{
+        float: right;
+    }
     .header__search{
         width: 60%;
         margin: 0 20px;
@@ -57,13 +78,26 @@
     .content__wrap{
         display: flex;
         flex-direction: row-reverse;
+        justify-content: space-between;
 
+    }
+    .news__item-content{
+        padding: 30px 0 10px 0;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
     .news__content-img{
         width: 30%;
     }
     .news__content-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .news__content-text p{
         margin: 0;
+    }
+    .content-discount__text{
+        padding-right: 20px;
     }
     .footer__policy-socials-dowloadapps{
         flex-direction: column-reverse;
