--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@
 .header__navbar{
     height: 60px;
     display: flex;
-    /* background-color: var(--primary-color); */
     justify-content: space-around;
     align-items: center;
 }
@@ -186,7 +185,9 @@
 }
 .service-item:first-child{
     border-left: 1px solid  rgb(214, 214, 214);
+    position: relative;
 }
+
 .service-item__img{
     width: 30px;
     margin: 0 auto;
@@ -195,6 +196,7 @@
 }
 .service-item.service-item-active{
     color: var(--text-heading-color);
+    background-color: white;
 }
 .service-item.service-item-active::before{
     content: "";
@@ -206,13 +208,16 @@
     left: 0;
 }
 .service-layout{
-    display: flex;
     padding: 20px;
     background-color: rgb(255,233,241);
     border-radius: 30px;
     width: 100%;
     margin: 20px auto;
-
+    display: none;
+}
+.service-layout.active{
+    display: flex;
+    animation: appear ease 0.5s;
 }
 .content-img{
    width: 100%;
@@ -354,13 +359,41 @@
 .instruction__device{
     /* position: relative; */
 }
+
 .instruction__device-container{
+    position: relative;
     height: 500px;
-    width: 300px;
+    width: 264px;
     background-image: url(https://static.mservice.io/blogscontents/momo-upload-api-190621112400-636967130404212068.png);
     background-repeat: no-repeat;
     background-size: contain;
     float: right;
+    z-index: 1;
+}
+.device-img__overlay, .instruction__device-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.device-img__overlay{
+    width: 92%;
+    height: 450px;
+    background-color: black;
+    border-radius: 10px;
+}
+/* .device__wrap-img{
+    position: absolute;
+    background-color: black;
+    top: 30px;
+    left: 0;
+    bottom: 35px;
+    right: 0;
+    
+} */
+.instruction__device-img{
+    width: 90%;
+    border-radius: 20px;
 }
 .instruction__steps-item{
     list-style: none;
@@ -521,19 +554,21 @@
 .content__wrap:hover .news__content-text{
     color: var(--primary-color);
 }
-.news__discount{
+.news__content-discount{
     display: flex;
     align-items: center;
+}
+.content-discount__text, .content-discount__time{
+    margin: 0;
+}
+.content-discount__text{
+    color: rgba(35, 35, 252, 0.801);
+    margin-right: 20px;
+}
+.content-discount__time{
+    color: rgba(0, 0, 0, 0.7);
     font-size: 1.2rem;
-}
-.news__discount-link{
-    text-transform: uppercase;
-    text-decoration: none;
-    font-weight: 700;
-    color: royalblue;
-}
-.news__discount-time{
-    margin: 0 18px;
+    font-weight: 600;
 }
 .wach-more__btn{
     margin: 40px auto;
